# adventurers-guild

./: Cargo.toml
backend/: .gitignore  Cargo.toml
backend/migrations/2023-01-30-013624_create_adventurers/: down.sql  up.sql
backend/src/: db.rs  main.rs  schema.rs
backend/src/controllers/: adventurer.rs  mod.rs
backend/src/routes/: adventurer.rs
migrations/2023-01-31-182845_rename_table_members/: up.sql
migrations/2023-02-01-001047_create_table_posts/: up.sql
migrations/2023-02-01-175403_adjust_table_posts/: up.sql
src/: db.rs  main.rs  schema.rs
src/database/: members.rs  mod.rs  posts.rs
src/models/: member.rs  mod.rs  post.rs
src/routes/: members.rs  mod.rs  posts.rs
