[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.6"
chrono = "0.4.23"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.rocket]
version = "0.5.0-rc.2"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "1.2.2"
features = ["v4", "fast-rng", "macro-diagnostics"]

[dependencies.diesel]
version = "1.4.8"
features = ["postgres"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
default-features = false
features = ["diesel_postgres_pool"]
